package lib;

public class Pizza {
    private int timeLeft;

    public Pizza() {
        this.timeLeft = 0;
    }

    // Getters and Setters
    public int getTimeLeft() { return timeLeft;}
    public void setTimeLeft(int timeLeft) { this.timeLeft = timeLeft; }
}