package lib;

public enum State {
    PENDING,            
    PREPARING,              
    CHEF_WAITING,
    OVEN_WAITING, 
    OVEN_PREPARING,
    DRIVER_WAITING, 
    DELIVERED
}
